--- a/code/app/andriod/Laundry/res/layout/cart_fragment_default.xml
+++ b/code/app/andriod/Laundry/res/layout/cart_fragment_default.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:layout_gravity="center"
     android:background="@color/backcolor"
     android:orientation="vertical" >
@@ -23,10 +23,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:text="个人中心"
+                android:text="洗衣篮"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/white"
-                android:textSize="25sp" />
+                android:textSize="@dimen/head_font_size_sm" />
         </RelativeLayout>
     </LinearLayout>
 
@@ -47,17 +47,17 @@
                 android:layout_marginBottom="20dp" >
 
                 <ImageButton
-                    android:id="@+id/user_head_btn"
+                    android:id="@+id/cart_fragment_def_img"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:background="@null"
                     android:scaleType="fitXY"
-                    android:src="@drawable/default_head" />
+                    android:src="@drawable/default_cart" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="80dp"
                 android:layout_marginBottom="50dp"
                 android:paddingBottom="10dp"
                 android:paddingLeft="50dp"
@@ -65,13 +65,13 @@
                 android:paddingTop="10dp" >
 
                 <Button
-                    android:id="@+id/user_btn_to_login"
+                    android:id="@+id/cart_fragment_start_btn"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:background="@drawable/common_btn"
-                    android:text="登  录"
+                    android:text="去下洗衣单"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
             </RelativeLayout>
