--- a/code/app/andriod/Laundry/res/layout/chart_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/chart_fragment.xml
@@ -11,19 +11,6 @@
         android:layout_marginBottom="20dp"
         android:background="@color/themecolor" >
 
-        <Button
-            android:id="@+id/user_register_back"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="10dp"
-            android:background="@null"
-            android:drawableLeft="@drawable/detail_back"
-            android:drawablePadding="5dp"
-            android:focusableInTouchMode="true"
-            android:text="返回"
-            android:textColor="@color/themecolor"
-            android:textSize="20sp" />
-
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
@@ -33,7 +20,7 @@
             android:text="洗衣篮"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:textSize="@dimen/head_font_size_sm" />
     </RelativeLayout>
 
     <ScrollView
