--- a/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
+++ b/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
@@ -20,8 +20,8 @@
             android:drawablePadding="5dp"
             android:focusableInTouchMode="true"
             android:text="返回"
-            android:textColor="@color/themecolor"
-            android:textSize="20sp" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/content_font_size" />
 
         <TextView
             android:id="@+id/textView1"
@@ -32,7 +32,7 @@
             android:text="添加待洗物品"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:textSize="@dimen/head_font_size_sm" />
     </RelativeLayout>
 
     <LinearLayout
@@ -43,7 +43,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.2"
             android:background="@color/backcolor" >
 
             <ScrollView
@@ -177,7 +177,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7"
             android:alpha="0.8"
             android:background="@color/white"
             android:paddingBottom="10dp"
@@ -188,9 +189,10 @@
             <Button
                 android:id="@+id/product_btn_to_cart"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/common_btn"
                 android:focusableInTouchMode="true"
                 android:text="洗衣篮"
