--- a/code/app/andriod/Laundry/res/layout/more_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/more_fragment.xml
@@ -8,21 +8,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/top_head_height"
-        android:layout_marginBottom="2dp"
-        android:background="@color/white" >
-
-        <Button
-            android:id="@+id/user_activity_back"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="10dp"
-            android:background="@null"
-            android:drawableLeft="@drawable/detail_back"
-            android:drawablePadding="5dp"
-            android:focusableInTouchMode="true"
-            android:text="返回"
-            android:textColor="@color/themecolor"
-            android:textSize="20sp" />
+        android:layout_marginBottom="20dp"
+        android:background="@color/themecolor" >
 
         <TextView
             android:id="@+id/textView1"
@@ -30,10 +17,10 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="我的活动"
+            android:text="更多"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/black"
-            android:textSize="25sp" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/head_font_size_sm" />
     </RelativeLayout>
 
     <ListView
