--- a/code/app/andriod/Laundry/res/layout/user_login.xml
+++ b/code/app/andriod/Laundry/res/layout/user_login.xml
@@ -26,8 +26,8 @@
                 android:drawablePadding="5dp"
                 android:focusableInTouchMode="true"
                 android:text="返回"
-                android:textColor="@color/themecolor"
-                android:textSize="20sp" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/content_font_size" />
 
             <TextView
                 android:id="@+id/textView1"
@@ -39,7 +39,7 @@
                 android:text="用户登录"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/white"
-                android:textSize="25sp" />
+                android:textSize="@dimen/head_font_size_sm" />
 
             <Button
                 android:id="@+id/user_login_to_register"
@@ -52,7 +52,7 @@
                 android:background="@null"
                 android:text="注册"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="@dimen/content_font_size" />
         </RelativeLayout>
     </LinearLayout>
 
@@ -137,7 +137,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:paddingBottom="10dp"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
@@ -146,7 +146,7 @@
         <Button
             android:id="@+id/user_login_submit"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/common_btn"
