--- a/code/app/andriod/Laundry/res/values/color.xml
+++ b/code/app/andriod/Laundry/res/values/color.xml
@@ -6,12 +6,16 @@
 	<color name="lightyellow">#FFFFE0</color><!--亮黄色 -->
 	<color name="yellow">#FFFF00</color><!--黄色 -->
 	<color name="tabbarback">#E9EAED</color>
-
+	<color name="backcolor">#E7E6E3</color>  <!-- 背景墙纸颜色 -->
 	<!-- <color name="themecolor">#48B805</color> 主题 鲜绿色 （72,184,5） -->
 	<color name="themecolor">#F6AB00</color> <!-- 主题 橘黄色，与icon保持一致（246,171,0） -->
-	<color name="presscolor">#D25000</color><!-- button按下颜色 -->
-	<color name="disablcolor">#FF8400</color><!-- button禁用颜色 -->
+	<color name="presscolor">#af7b05</color><!-- button按下颜色 ,对应主题橘黄色，颜色加深-->
+	<color name="disablcolor">#c4cedc</color><!-- button禁用颜色（196,206,220） -->
 	
-	<color name="backcolor">#E7E6E3</color>  <!-- 背景墙纸颜色 -->
-	<color name="focuscolor">#FF643F</color> <!-- nav 选中字体颜色 -->
+	<color name="greencolor">#48B805</color><!-- 鲜绿色 （72,184,5） -->
+	<color name="dgreencolor">#3c9905</color><!-- 深绿色 （60,150,5） -->
+	
+	<color name="focuscolor">#FF643F</color> <!-- 选中字体颜色 ，橘红色（255,100,63）-->
+	<color name="darkfocuscolor">#a54123</color> <!-- 深橘红色（165,65,35）-->
+	
 	</resources>
