--- a/code/app/andriod/Laundry/res/layout/chart_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/chart_fragment.xml
@@ -55,7 +55,7 @@
                 android:padding="10dp" >
 
                 <TextView
-                    android:id="@+id/chart_tatolCount"
+                    android:id="@+id/chart_total_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="3"
