--- a/code/app/andriod/Laundry/res/layout/order_list.xml
+++ b/code/app/andriod/Laundry/res/layout/order_list.xml
@@ -1,14 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/backcolor"
-    android:gravity="top"
-    android:orientation="vertical"
-    tools:context="cn.fuego.smart.home.ui.MainActivity" >
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
+  <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/top_head_height"
         android:background="@color/themecolor" >
@@ -19,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="最新咨询"
+            android:text="我的订单"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white" />
 
@@ -32,7 +28,7 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/news_list"
+            android:id="@+id/order_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
         </ListView>
