--- a/code/app/andriod/Laundry/res/layout/home_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/home_fragment.xml
@@ -87,7 +87,7 @@
 
                         <Button
                             android:id="@+id/Button06"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/index_btn1"
                             android:gravity="center_vertical|right"
@@ -107,7 +107,7 @@
 
                         <Button
                             android:id="@+id/Button05"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/index_btn1"
                             android:gravity="center_vertical|right"
@@ -127,7 +127,7 @@
 
                         <Button
                             android:id="@+id/Button02"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/index_btn1"
                             android:gravity="center_vertical|right"
@@ -140,7 +140,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical" >
 
@@ -154,8 +154,8 @@
 
                         <Button
                             android:id="@+id/Button04"
-                            android:layout_width="wrap_content"
-                            android:layout_height="70dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:background="@drawable/index_btn3"
                             android:gravity="center_vertical|left"
                             android:paddingLeft="20dp"
@@ -174,8 +174,8 @@
 
                         <Button
                             android:id="@+id/Button03"
-                            android:layout_width="wrap_content"
-                            android:layout_height="70dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:background="@drawable/index_btn3"
                             android:gravity="center_vertical|left"
                             android:paddingLeft="20dp"
@@ -194,8 +194,8 @@
 
                         <Button
                             android:id="@+id/Button01"
-                            android:layout_width="wrap_content"
-                            android:layout_height="70dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:background="@drawable/index_btn3"
                             android:gravity="center_vertical|left"
                             android:paddingLeft="20dp"
@@ -214,8 +214,8 @@
 
                         <Button
                             android:id="@+id/Button07"
-                            android:layout_width="wrap_content"
-                            android:layout_height="70dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:background="@drawable/index_btn3"
                             android:gravity="center_vertical|left"
                             android:paddingLeft="20dp"
@@ -235,33 +235,33 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="10dp" >
 
                     <Button
                         android:id="@+id/Button08"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="50dp"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
                         android:background="@drawable/common_btn"
                         android:focusableInTouchMode="true"
                         android:text="客服电话"
                         android:textColor="@color/white"
-                        android:textSize="20sp" />
+                        android:textSize="@dimen/content_font_size" />
                 </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="10dp" >
 
                     <Button
                         android:id="@+id/button2"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="50dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
                         android:background="@drawable/btn_green"
