--- a/code/app/andriod/Laundry/res/layout/order_list_item.xml
+++ b/code/app/andriod/Laundry/res/layout/order_list_item.xml
@@ -12,51 +12,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="20dp" >
-
-        <ImageView
-            android:id="@+id/home_list_item_img"
-            android:layout_width="120dp"
-            android:layout_height="80dp"
-            android:src="@drawable/load_image_failed" />
+ 
 
         <TextView
-            android:id="@+id/home_list_item_title"
+            android:id="@+id/order_list_item_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/home_list_item_img"
-            android:text="标题"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/home_list_item_curPrice"
+            android:id="@+id/order_list_item_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/home_list_item_img"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/home_list_item_img"
-            android:text="TextView"
             android:textColor="@color/themecolor" />
-
-        <TextView
-            android:id="@+id/home_list_item_oldPrice"
+       <TextView
+            android:id="@+id/order_list_item_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/home_list_item_curPrice"
-            android:layout_alignBottom="@+id/home_list_item_curPrice"
-            android:layout_marginLeft="16dp"
-            android:layout_toRightOf="@+id/home_list_item_curPrice"
-            android:text="TextView" />
-
+            android:layout_centerVertical="true"/>
+ 
+       
         <TextView
-            android:id="@+id/home_list_item_desp"
+            android:id="@+id/order_list_item_time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/home_list_item_img"
-            android:text="TextView" />
+            android:layout_height="wrap_content"/>
+ 
+
+ 
 
     </RelativeLayout>
 
