--- a/code/app/andriod/Laundry/res/layout/user_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/user_fragment.xml
@@ -111,4 +111,35 @@
             android:textSize="20sp" />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/white"
+        android:gravity="center_vertical" >
+
+        <ImageView
+            android:id="@+id/ImageView02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="29dp"
+            android:scaleType="center"
+            android:src="@drawable/my_setting" />
+
+        <Button
+            android:id="@+id/user_btn_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/ImageView02"
+            android:layout_marginLeft="22dp"
+            android:layout_toRightOf="@+id/ImageView02"
+            android:background="@null"
+            android:drawableRight="@drawable/forward_sm"
+            android:gravity="center_vertical|center_horizontal|left"
+            android:text="退出"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+    </RelativeLayout>
 </LinearLayout>
