--- a/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
+++ b/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
@@ -50,17 +50,19 @@
                 android:id="@+id/scrollView1"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:background="@color/white" >
+                android:background="@color/ivory" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/disablcolor"
                     android:orientation="vertical" >
 
                     <RadioGroup
                         android:id="@+id/product_radio_group"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:background="@color/disablcolor"
                         android:orientation="vertical" >
 
                         <RadioButton
@@ -162,6 +164,7 @@
                     android:id="@+id/product_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:divider="@color/backcolor"
                     android:dividerHeight="1dp" >
 
