--- a/code/app/andriod/Laundry/res/layout/chart_list_item.xml
+++ b/code/app/andriod/Laundry/res/layout/chart_list_item.xml
@@ -1,59 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:orientation="horizontal"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp" >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/white" >
+        android:layout_height="60dp"
+        android:layout_weight="0.35" >
+
+        <TextView
+            android:id="@+id/chart_list_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_weight="0.5"
+            android:text="衣物名称"
+            android:textColor="@color/black"
+            android:textSize="@dimen/content_font_size" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="0.45" >
 
         <TextView
             android:id="@+id/chart_list_item_price"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:layout_weight="0.5"
             android:text="价格"
             android:textColor="@color/black"
             android:textSize="@dimen/content_font_size" />
 
-        <TextView
-            android:id="@+id/chart_list_item_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/chart_list_item_price"
-            android:layout_alignBottom="@+id/chart_list_item_price"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="16dp"
-            android:text="衣物名称"
-            android:textColor="@color/black"
-            android:textSize="@dimen/content_font_size" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_weight="0.5" >
 
         <EditText
             android:id="@+id/chart_list_item_quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_alignBaseline="@+id/chart_list_item_price"
-            android:layout_alignBottom="@+id/chart_list_item_price"
-            android:layout_marginLeft="17dp"
-            android:layout_toRightOf="@+id/chart_list_item_price"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="0.5"
             android:background="@drawable/edittext_sel"
             android:ems="2"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:gravity="center_vertical|center_horizontal"
             android:inputType="number"
             android:text="1"
             android:textColor="@color/black"
             android:textSize="@dimen/content_font_size" />
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_weight="0.5" >
+
         <Button
             android:id="@+id/char_list_item_btn_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
+            android:layout_weight="0.5"
             android:background="@drawable/btn_del_img" />
 
     </RelativeLayout>
