--- a/code/app/andriod/Laundry/res/layout/user_login.xml
+++ b/code/app/andriod/Laundry/res/layout/user_login.xml
@@ -24,7 +24,8 @@
                 android:background="@null"
                 android:drawableLeft="@drawable/detail_back"
                 android:drawablePadding="5dp"
-                android:focusableInTouchMode="true"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:text="返回"
                 android:textColor="@color/white"
                 android:textSize="@dimen/content_font_size" />
